# dist/swagger.json
@@ -3,7 +3,7 @@
     "info": {
         "version": "1.0.0",
         "title": "Bice",
-        "description": "microservicio de usuarios",
+        "description": "microservicio de valores",
         "license": {
             "name": "MIT",
             "url": "https://opensource.org/licenses/MIT"
@@ -23,7 +23,7 @@
             }
         },
         {
-            "url": "{protocol}://bice.com/",
+            "url": "{protocol}://bice-backent-prueba.herokuapp.com/",
             "variables": {
                 "protocol": {
                     "enum": [
@@ -43,30 +43,45 @@
                     "ok"
                 ],
                 "properties": {
-                    "ok": {
+                    "status": {
                         "type": "boolean"
                     },
-                    "response": {
+                    "datos": {
                         "type": "object",
                         "properties": {
-                            "_id": {
+                            "key": {
                                 "type": "string"
                             },
-                            "id": {
-                                "type": "number"
-                            },
-                            "brand": {
+                            "name": {
                                 "type": "string"
                             },
-                            "description": {
+                            "unit": {
                                 "type": "string"
                             },
-                            "image": {
+                            "date": {
                                 "type": "string"
                             },
-                            "price": {
+                            "value": {
                                 "type": "number"
                             }
+                        }
+                    }
+                }
+            },
+            "ResponseTipo": {
+                "type": "object",
+                "required": [
+                    "ok"
+                ],
+                "properties": {
+                    "status": {
+                        "type": "boolean"
+                    },
+                    "datos": {
+                        "type": "array",
+                        "items": {
+                            "type": "string",
+                            "example": "cobre"
                         }
                     }
                 }
@@ -85,7 +100,7 @@
         }
     },
     "paths": {
-        "/productos/": {
+        "/valores/": {
             "post": {
                 "requestBody": {
                     "required": true,
@@ -94,7 +109,10 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "producto": {
+                                    "tipo": {
+                                        "type": "string"
+                                    },
+                                    "fecha": {
                                         "type": "string"
                                     }
                                 }
@@ -103,7 +121,7 @@
                     }
                 },
                 "tags": [
-                    "Productos"
+                    "Valores"
                 ],
                 "summary": "ver productos",
                 "responses": {
@@ -113,6 +131,36 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/ResponseProducto"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "NOK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/tipos/": {
+            "get": {
+                "tags": [
+                    "Valores"
+                ],
+                "summary": "ver productos",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ResponseTipo"
                                 }
                             }
                         }
